# ClimaMetrics

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: energyplus_paths.yaml  settings.yaml
data/idf/: README.md
data/weather/: README.md
docs/: EXAMPLES.md  INDICATORS.md
src/: __init__.py  cli.py  column_explorer.py  config.py  csv_exporter.py  csv_pivot.py  idf_analyzer.py  indicators.py  powerbi_exporter.py  simulation.py  utils.py
tests/: __init__.py
